# VIPSS

./: LICENSE.txt  ReadMe.md  env.sh
data/bathtub/: input.xyz
data/fertility/: input.xyz
data/hand_ok/: input.xyz
data/noise_kitten/kitten_h001.001/: input.xyz
data/noise_kitten/kitten_h004.001/: input.xyz
data/phone/: input.xyz
data/planck/multisample_n1000/: input.xyz
data/planck/multisample_n2000/: input.xyz
data/planck/multisample_n4000/: input.xyz
data/planck/multisample_n500/: input.xyz
data/surfaces_500/boat-artmesh/: input.xyz
data/surfaces_500/bottle/: input.xyz
data/surfaces_500/hand/: input.xyz
data/surfaces_500/kitten/: input.xyz
data/surfaces_500/mug/: input.xyz
data/surfaces_500/vertebra/: input.xyz
data/torus/crosscut/: input.xyz
data/torus/halfsamplel500_r25/: input.xyz
data/torus/multisample_n25/: input.xyz
data/torus/multisample_n50/: input.xyz
data/torus/parallelcut/: input.pwn  input.xyz
data/torus/wires/: input.xyz
data/walrus/: input.xyz
data/wireframes/doghead/: input.xyz
data/wireframes/phone/: input.xyz
data/wireframes/spring/: input.xyz
data/wireframes/trebol/: input.xyz
src/: ImplicitedSurfacing.cpp  ImplicitedSurfacing.h  Solver.cpp  Solver.h  rbf_Hermite.cpp  rbf_Hermite_T.cpp  rbf_interface.cpp  rbfcore.cpp  rbfcore.h
vipss/: CMakeLists.txt  main.cpp  makefigure.sh
vipss/src/: Solver.cpp  Solver.h  rbf_Hermite.cpp  rbf_interface.cpp  rbfcore.cpp  rbfcore.h  readers.cpp  readers.h  utility.h
vipss/src/surfacer/: ImplicitedSurfacing.cpp  ImplicitedSurfacing.h  Polygonizer.h  WINSystemDefines.H  polygonizer.cpp
vipss/src/surfacer/utils/: BaryPoly.h  C2_ComplexNumbers.H  C2_LFTTC.H  C2_LFTTC_i.H  C2_PointTC.H  C2_PointTC_i.H  Crv_Basis.H  Ctr2SufManager.H  Image_Raw.H  Image_Raw1D.H  LiveWire.h  Mesh_Array.H  Mesh_Bbox.H  Mesh_GMesh.H  Mesh_HashStruct.H  Mesh_Hh.H  Mesh_Intersect.H  Mesh_Map.H  Mesh_Mesh.H  Mesh_PolygonSpatial.H  Mesh_Pool.H  Mesh_Pqueue.H  Mesh_Queue.H  Mesh_Random.H  Mesh_Set.H  Mesh_Spatial.H  Mesh_Stack.H  Mesh_Stat.H  PMeshLite_Ply.H  Pm_MeshLite.H  Pm_MeshLite_i.H  Ppm.H  R2_Boxed_polygon_i.H  R2_Contour.H  R2_Contour_i.H  R2_Ellipse_i.H  R2_Line_i.H  R2_Line_seg_i.H  R2_Polygon_i.H  R2_Sphere_i.H  (+67 more)
